src/FinancialForce Accounting/objects/codaCashMatchingSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Cash Matching Settings (FF)</description>
    <fields>
        <fullName>AsynchMatchingThreshold__c</fullName>
        <label>Asynch Matching Threshold</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AsynchUndoMatchThreshold__c</fullName>
        <label>Asynch Undo Match Threshold</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BackgroundMatchingBatchSize__c</fullName>
        <label>Background Matching Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EnableExtendedCashMatching__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables Extended Cash Matching. Redirects users from the Classic Cash Matching pages.</description>
        <label>DEPRECATED:Enable Extended Cash Matching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MatchingLinesThreshold__c</fullName>
        <label>Background Matching Lines Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MatchingReferencesThreshold__c</fullName>
        <label>Background Matching References Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShowAnalysisSectionByDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Analysis Section by Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowDiscountValues__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that you want to show Discount values on the Extended Cash Matching page (Other Transactions pane).</description>
        <label>Show Discount Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowRemainingValues__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that you want to show Remaining values on the Extended Cash Matching page (Other Transactions pane).</description>
        <label>Show Remaining Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowWriteoffValues__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that you want to show Write-off values on the Extended Cash Matching page (Other Transactions pane).</description>
        <label>Show Write-off Values</label>
        <type>Checkbox</type>
    </fields>
    <label>Cash Matching Settings (FF)</label>
</CustomObject>